<resources>
    <string name="app_name">Minggu6 SQLite1</string>
    <string name="add_text" >ADD TEXT</string>
    <string name="klik_lihat" >Click to view</string>
    <string name="save_as_public" >SAVE_AS_PUBLIC</string>
    <string name="save_as_private" >SAVE_AS_PRIVATE</string>
    <string name="show_public_data" >SHOW PUBLIC DATA</string>
    <string name="show_private_data" >SHOW PRIVATE DATA</string>
    <string name="back" >Back</string>
</resources>